remove overflow-y to fix watchlist minor bug.

--- a/react-app/src/stylesheets/AppHome.css
+++ b/react-app/src/stylesheets/AppHome.css
@@ -19,8 +19,6 @@
 .app-home-right {
     width: 25%;
     height: 100%;
-    overflow-y: scroll;
-    scrollbar-width: none;
 }
 
 #app-home-chart-container{
